feta:下拉筛选列表图片更新设备
