# internal/dto/device/change_filter_image_device.go
@@ -1,0 +1,5 @@
+package device
+
+type ChangeDeviceTypeReq struct {
+	DeviceTypeID uint `json:"device_type_id" form:"device_type_id" binding:"required,min=1"`
+}
